deploy-ratings-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  generation: 1
  labels:
    app: ratings
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: ratings
    app.openshift.io/runtime: nodejs
    version: v1
  name: ratings-v1
  namespace: red-bookinfo1-app
  resourceVersion: "60915"
  uid: a4f4bfca-fc0a-471d-90d1-e696421daca6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ratings
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: ratings
        version: v1
    spec:
      containers:
      - image: quay.io/maistra/examples-bookinfo-ratings-v1:2.2.0
        imagePullPolicy: IfNotPresent
        name: ratings
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bookinfo-ratings
      serviceAccountName: bookinfo-ratings
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-08-15T14:26:11Z"
    lastUpdateTime: "2023-08-15T14:26:11Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-08-15T14:25:18Z"
    lastUpdateTime: "2023-08-15T14:26:11Z"
    message: ReplicaSet "ratings-v1-6f5956f978" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
