deploy-reviews-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  generation: 3
  labels:
    app: reviews
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: reviews
    app.openshift.io/runtime: java
    version: v1
  name: reviews-v1
  namespace: red-bookinfo1-app
  resourceVersion: "87361"
  uid: 65343884-ceb8-4aa0-82b4-13edfcccb2e2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: reviews
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - env:
        - name: LOG_DIR
          value: /tmp/logs
        image: quay.io/maistra/examples-bookinfo-reviews-v1:2.2.0
        imagePullPolicy: IfNotPresent
        name: reviews
        ports:
        - containerPort: 9080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /opt/ibm/wlp/output
          name: wlp-output
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: bookinfo-reviews
      serviceAccountName: bookinfo-reviews
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: wlp-output
      - emptyDir: {}
        name: tmp
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-08-15T14:25:18Z"
    lastUpdateTime: "2023-08-15T14:26:07Z"
    message: ReplicaSet "reviews-v1-7c699b66c4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-08-15T15:25:19Z"
    lastUpdateTime: "2023-08-15T15:25:19Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
