svc-details.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: mesh1-ossm-federation-bookinfo
    meta.helm.sh/release-namespace: teste-bookinfo
  creationTimestamp: "2023-08-15T14:25:18Z"
  labels:
    app: details
    app.kubernetes.io/managed-by: Helm
    service: details
  name: details
  namespace: red-bookinfo1-app
  resourceVersion: "59442"
  uid: 124c0e14-84ce-4f18-9b0e-8ce0b91f8abc
spec:
  clusterIP: 172.30.90.246
  clusterIPs:
  - 172.30.90.246
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: details
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
