virtualservices-ratings.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  creationTimestamp: "2023-08-15T16:11:07Z"
  generation: 1
  name: ratings
  namespace: red-bookinfo1-app
  resourceVersion: "107593"
  uid: 2539c43f-bd9f-40d1-9d5d-6f0805d29318
spec:
  hosts:
  - ratings
  http:
  - route:
    - destination:
        host: ratings
        subset: v1
      weight: 100
